--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: webshot2
+Package: webshot
 Title: Take Screenshots of Web Pages
 Version: 0.0.0.9000
 Authors@R: person("Winston", "Chang", email = "winston@rstudio.com", role = c("aut", "cre"))
