--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(resize)
 export(rmdshot)
 export(shrink)
 export(webshot)
+export(find_phantom)
 import(chromote)
 import(later)
 import(promises)
